--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,9 @@ thead th {
 .menu {
     margin-top: 20px;
 }
+.error{
+    color: #dc2222 ;
+    font-size: 15px;
+    /* font-style: italic; */
+    text-transform: capitalize;
+}
